# gene-platform-py-scripts

./: .gitmodules  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-package.yml  build-python.yml  build-r.yml  build-rust.yml
R/: DESCRIPTION
R/src/: de_analysis.R
gene_platform_utils/: between_sample_norm.py  generate_html_3d_embedding.py  genes.py  plot_de.py  plot_eda.py  plot_gsea.py  transformation.py
python/: README.md
python/gene_platform_utils/: plot_de.py  plot_eda.py  plot_gsea.py  transformation.py  vst.py
src/: graph.py  plot_de_results.py  plotly_sample_correlation_heatmap.py  vst.py
